...
            android:layout_marginEnd="16sp"
            android:layout_marginTop="5sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:layout_weight="1"
                android:textSize="14sp"
                android:gravity="center"
                android:text="We have sent the verification pin to : number"/>
        </LinearLayout>

...
            android:layout_marginTop="32sp"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="16sp"
            android:gravity="center">

            <com.alimuzaffar.lib.pin.PinEntryEditText
                android:id="@+id/pinEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:digits="1234567890"
                android:inputType="number"
                android:maxLength="6"
...
